edited the sticky and the read next padding

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -6,9 +6,9 @@
 	<!--Below is a meta element that tells the browser to render it at its actual size-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Below is a reset, it clears off browser's default style -->
-	<link href="/reset.css" rel="stylesheet">
+	<link href="../reset.css" rel="stylesheet">
 	<!-- Below is a link to my CSS file -->
-	<link href="/common.css" rel="stylesheet"> 
+	<link href="../common.css" rel="stylesheet"> 
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
@@ -63,21 +63,22 @@
 			<p class="bigtext1">This “other” dimension<sup>18</sup> or, as we propose, an “alternative disciplinarity”—an “alterplinarity” that does not rely on historic disciplines of design as the boundaries of our understanding has been superseded.</p>
 			<p>The digital has modified the models of design thought and action, and, as a result, research and practice should transform from a convention domesticated by the academy to a reaction to globalization that is yet to be disciplined.</p>
 	<div class="stickytitledark"><h3>This Is The ‘Alterplinary’ Manifesto:</h3></div>
-	<div class="stickytitle2"><h4>01 Dispose Carefully of What You Know</h4></div>
-	<section class="frontsection">
+	<div class="stickytitle3"><h4>01 Dispose Carefully of What You Know</h4></div>
+	<!-- <section class="frontsection"> -->
 		<p>All design thought and action should emanate from a point of not knowing. Socrates, the Greek philosopher, is attributed to have said that:</p>
 		<p class="bigtext1">“The only true wisdom is in knowing you know nothing.”</p>
 		<p>This resonates well with Kenya Hara’s notion of “Exformation”, where he makes clear that Exformation doesn’t mean making known, but understanding how little we know.<sup>19</sup> If we can recognize that we know so little, a method for finding out how little we know will become clear to us as well. Kenya Hara believes that comprehension and recognition of the unknown is a necessary for the beginning of any design project. Exformation should be considered the direct opposite to the familiar, meaning exploration of the unknown. Hara emphasizes how our lives are full of wonders and the unknown, and how, as a race, we need to constantly wake up and consider new perspectives.</p>
 		<p>He believes that “known” and “understood” are both horrible concepts, which usually means that your works (designs) have nothing new to offer the world. Alternatively, to succeed, Kenya Hara suggests, one has to look for the unknown consciously. The concept of “not knowing” is increasingly being acknowledged as a critical skill to tackle the complex problems we face in contemporary societies.</p>
 		<p>That is, we should not fear heading uncomfortably toward the unknown. Rather, by developing a relationship with “not knowing,” we may discover new ways of designing, living, working and thriving in our modern world. Not knowing can be an exciting proposition where we are no longer limited by what we already know, which allows for richer possibilities and more varied wisdom to prosper.<sup>20</sup></p>
 	<div class="stickytitle4"><h4>02 Teach What You Don’t Know</h4></div>
+	<section class="frontsection2">
 		<p class="topspace">When confronted with the problem of teaching a language he did not speak, the eighteenth century educationalist Joseph Jacotot discovered it was possible to teach what you don’t know. In Jacque Ranciere’s reprise of Jacotot’s relevance in his book, The Ignorant Schoolmaster, he reminds us that everyone is taught to forget that we all possess the ability to learn.<sup>21</sup> For almost a century design has been taught from the perspective of the Bauhaus, which relied on pedagogy that forgot the machine had already made the idea into an image of itself, setting design education on a path resulting in imitation and derivation (rather than invention or innovation), which remain the prevalent models today.</p>
 		<p>Design has evolved to require a completely different logic from that which is informing its current learning models, where so many degree programs are guided by professionally licensed trajectories that are more germane to history than the possible future scenarios we now need to envisage to live in a rapidly changing world. Similar to Jacotot’s experiences, Therese Huston’s book, “Teaching What You Don’t Know,” provides clear evidence that teaching outside of one’s area of competence is typically the norm in the U.S. academy.<sup>22</sup></p>
 		<p>Rather than viewing this as a weakness, however, Huston suggests that teaching what you don’t know may have certain advantages. Huston argues that</p>
 		<p class="bigtext1">novice tutors tend to show more empathy and have more realistic estimations of the time it takes new learners to complete tasks.</p>
 		<p>Expert tutors, on the other hand, often expect more than new learners can handle. It is also suggested that novice tutors can better envision the steps that a beginner will take, what kinds of mistakes he or she will make, and which steps he or she may have to repeat.</p>
 		<p>Furthermore, novice tutors are more likely than expert tutors to relate difficult concepts to everyday life, and to make use of common knowledge to facilitate this (i.e., to relate these concepts to things that the learner likely already knows). Given the perilous state design currently finds itself in, teaching what we don’t know may herald a refreshing alternative to design’s historical preoccupation with the modern project.</p>
-	
+	</section>
 	
 	<div class="stickytitle4"><h4>03 Take Design Seriously</h4></div>
 		<section class="frontsection2">
@@ -101,7 +102,7 @@
 		<p>Today, the disappointment and alienation that many people experience in contemporary society revolves around their insecurities about the future. Clearly, it is time for design to deliver coherent visions of desirable futures that address our dissatisfaction, our unhappiness, and our isolation, and bring those visions about.</p>
 	</section>
 	<div class="stickytitle6"><h4>05 Object to Sustaining Everything</h4></div>
-	<section class="frontsection3">
+	<section class="frontsection4">
 		<p class="topspace">Rather than trying to channel all design thought and action through the unsustainable framework of sustainability, it is clear that we have yet to design any viable response to the shift from rural to urban living occurring around the world. On a day in 2007, it is generally accepted that the population of our planet shifted from predominantly rural to predominantly urban living, and that by mid-century, 75 % of the world’s population will live in cities. 60 % of humanity will live in urban slums by this time.</p>
 		<p>Well before the UN produced this prediction, and around the time of the discovery of limits to growth articulated in the 1972 book The Limits to Growth by the Club of Rome,<sup>27</sup> the fields of design had begun to rally around the notion of the need for more effective stewardship of the planet. That is, there was concerted advocacy for the infinite possibilities of design to be balanced by the infinite responsibilities of designing.</p>
 		<p>It is very clear that design latched on to the infinite possibilities portion of this principle, but shrugged off the responsibilities. That ill-considered course of action cleared the path for championing sustainability, so very quickly, rather than stewardship by those who were seeking to change the world. Sustainability was dumped on everyone, and, for much longer than the designers of this ruse imagined, the whole world was made responsible for sustaining unsustainable ways of procuring, living, making and distributing. Having finally seen through this subterfuge, those in the know—some of whom are designers and design educators</p>
@@ -109,13 +110,13 @@
 		<p>As a reaction to a wide variety of planetary crises, resilience is more riddle than reprieve. It is a riddle because it is hard to imagine an elastic planet bouncing back from its current evolutionary path being forced onto a new one by the steady advance of the Anthropocene.<sup>28</sup> This is our planet’s current geologic era that is marked in the geologic record by the recent discovery of plastiglomerate, or plastic rock.<sup>29</sup></p>
 		<p>Sadly, the staunchest adherents to the project of sustainability appear to reside in design schools, whose curricula have been appropriately recycled into socially and politically palatable constructs and have now all been rendered in shades of worthy grey. Design should reject sustainability and instead concentrate on what we might need to do to recover from being together on such a populous planet in such unprecedented proximity staring at a growing number of quickly evolving anthropocentric crises.</p>
 	</section>
-		<div class="stickytitle3"><h4>06 Design Without Reproach</h4></div>
+		<div class="stickytitle6"><h4>06 Design Without Reproach</h4></div>
 		<p class="topspace">Design’s raison d’etre is to disrupt, contest, invent, direct, coordinate, respond, provoke and project. As such, contemporary design projects require undisciplined and irresponsible designers who are capable of purposely blurring social, economic and political distinctions, and who are able to shift methods from being ‘discipline-based’ to ‘issue- or project-based.’</p>
 		<p>These designers will be most effectively placed to make connections that generate new methods, and to identify ‘other’ dimensions of design research, activity and thought that are needed for the complex, interdependent societal issues we now face.</p>
 		<p>Tony Fry, in his critical analysis of contemporary design education, proposes significant redirection in the education of designers. Fry claims that </p>
 		<p class="bigtext1">one of the key problems of conventional forms of design education is that it is bound up in its professional practices, processes, and political ideology.</p>
 		<p>This has led to a rupture, Fry proposes, that is now evident in many forms of design education, research, and practice globally, between what designers have long been educated to design and what now needs to be designed instead to create the kind of world that will sustain our life on this planet into the future.<sup>30</sup></p>
-	<div class="stickytitle4"><h4>07 Objects are Invisible</h4></div>
+	<div class="stickytitle6"><h4>07 Objects are Invisible</h4></div>
 			<section class="frontsection2">
 		<p>In answer to an interview question posed to him in 1968, ‘Will there ever be silence?,’ Marshall McLuhan replied </p>
 		<p class="bigtext1"> “Objects are unobservable. Only relationships between objects are observable.”<sup>31</sup> </p>
@@ -127,7 +128,7 @@
 		<p class="bigtext1">but now it is time for design to service the deteriorating conditions on the one planet we share.</p>
 		<p>However, as a framework for design thought and action, and as a notion lending legitimacy to design outcomes, usability runs into another major problem: it doesn’t account for fashion. The world of fashion is certainly the most volatile battleground for the contest between the different projects of the user and designer. The phenomenon of fashion points to new possibilities for the notion of usability, wherein people might now have to craft their own personalized and customized world.<sup>33</sup></p>
 	</section>
-	<div class="stickytitle4"><h4>08 Design with Care</h4></div>
+	<div class="stickytitle6"><h4>08 Design with Care</h4></div>
 	<section class="frontsection2">
 		<p>With the failure of the structural mega-programs of the twentieth century, there is a need to transgress frigid technological perfection into genial ecological possibilities, and this has to be done with care. In this context, care refers to designing with the macro and micro social, technological, economic, environmental and political effects of design decision-making well in mind.</p>
 		<p class="bigtext1">Because we now operate in a globalized state of culture, design needs to seek new territories to offset the relentless uniformity derived from our current cycle of mass culture / consumption. </p>
@@ -137,7 +138,7 @@
 		<p>There will be more than 1 billion people living in the world who will have effectively aged out of its workforce by 2040. With care, however, design can play a major role in transforming how health and social care looks and feels for many of these people. Working collaboratively, designers, together with clinical directors, health and social care experts, families, and others will co-develop high quality care that is focused around meeting the needs and desires of individuals and that puts them in control of their own care.</p>
 		<p>As both the proportion of older people and the length of life increase throughout the world, arguably design’s greatest purpose will be to ensure we are cared for in ways that maintain longer periods of good health, along with a sustained sense of well-being, and extended periods of meaningful social engagement and productivity. Design’s major incentive in the decades ahead, then, is to develop and establish physical and social infrastructures that will foster better health and well-being in older age.</p>
 	</section>
-	<div class="stickytitle4"><h4>09 Design Within History</h4></div>
+	<div class="stickytitle6"><h4>09 Design Within History</h4></div>
 	<section class="frontsection2">
 		<p>Perhaps design needs an alternative history. Not a counter-cultural version of a history of design, but another way to present what most designers avoid contemplating—<mark>the past.</mark></p>
 		<p>That is, for most designers, design has no history; it is enacted in the permanent present, and if in some way they are reminded of its history, most designers cannot see any future in this past. Design has never been connected to its broader, more deeply defined temporal dimensions.Time, from the point of view of design, is now.</p>
@@ -152,7 +153,7 @@
 		<p class="bigtext1">—faith in technological progress, but, in this case, it is a digitally networked progress.</p>
 		<p>In order to imagine a viable future, it has now become necessary to navigate the competing time frames of the digital cataloguing of the past and the digital reproduction of the future. Finally, there is the problem of the future in the past, or the history / theory of design (i.e. something we will look at sometime in the future), or the core problem of design’s carelessness with its history in leaving us with but one problem to solve—the contest between being and becoming.</p>
 	</section>
-	<div class="stickytitle4"><h4>10 Design: Idea versus Ideal</h4></div>
+	<div class="stickytitle6"><h4>10 Design: Idea versus Ideal</h4></div>
 	<section class="frontsection2">
 		<p>Because of its media definition, the very idea of design invites pursuit of the ideal—once an action in pursuit of representation, now a representation in pursuit of better (or just more) representation. Additionally, educational enhancement has laid the path to the realization of the ideal designer—a course of exercises to build job-winning capability. Enhancement was developed around the regime of organization and has become classically scientific. The regime is now so successful that it is imitated ubiquitously—now visible everywhere making hamburgers, athletes, and lots of other stuff.</p>
 		<p>Therefore, the idea that design produced the imitation of both the regime (once designed it is imitated by almost every school) and the designer (almost every graduate emerges from his or her course of study with the same capabilities). The imitation is now the ideal, and the media transmit this creation</p>
@@ -161,8 +162,8 @@
 		<p>An answer requires knowing what to look for, and perhaps we shouldn’t look at the means of enhancement (talent identification and education), or enhancing the means (augmented digital representation), which both pursue the ideal. If we look from outside the regime, then the ideal designer is playing to a skeptical public (“Nothing seems to be getting better ...”) with little trust in the idea of design (especially since everyone knows what needs to be done).</p>
 		<p>So without an idea of design, the ideal (an imitation of design) is now a fragile media invention with no moral reference. Further, now that the idea of the discipline of design doesn’t seem to exist, and its ideal exists on an other playing field defined by the media—an alternative playing field playing an alterplinary discipline.<sup>36</sup> The net result is the ideal has no feel for the idea, and the idea has no effect on the ideal. If we accept this scenario, we have to ask whether we still participate in the idea of design?</p>
 	</section>
-	<div class="stickytitle5"><h3>Conclusion</h3></div>
-	<section class="frontsection3">
+	<div class="stickytitle7"><h3>Conclusion</h3></div>
+	<section class="frontsection5">
 		<p>We have argued that the discipline of design has been superseded by a condition where the conventionally defined design disciplines have been dispersed. Moreover, this reliance on the ‘exhausted’ historic disciplines as the boundary of our understanding has been superseded by an unlimited expanse that we call ‘alterplinarity.’<sup>37</sup> </p>
 		<p>As a consequence, this paper presents a manifesto for a future design discipline where the emphasis is on understanding how little we know and recognizing that the unknown is a necessary condition for the beginning of any project. That is, as design researchers and educators, we should focus on what we do not know and move away from current models of design education that largely result in imitation and derivation as the norm, whilst also reminding ourselves that design must be taken seriously at all times.</p>
 		<p>This seriousness is inherent in the new strategy we require for design. A strategy that reconnects design with its historic project</p>
