--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -19,7 +19,7 @@
 			<h3>Ch.2 &nbsp; &nbsp; &nbsp;Hal Foster  &nbsp; &nbsp; &nbsp;2000</h3>
 		</header>
 		<div id="navbar">
-			<a href="../">Home</a>
+			<a href="/index.html">Home</a>
 			<a href="/article-crime/index.html"><mark>Crime</mark></a>
 			<a href="/article-factory/index.html">Factory</a>
 			<a href="/article-discipline/index.html">Discipline</a>
