--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -12,18 +12,29 @@
 	</head>
 	<body>
 <!-- Main title -->
-		<header>
-			<h1>Design &</h1>
-			<h2>Crime</h2>
-			<h2 span id="titlecontinue">& Other Diatribes</h2>
-			<h3>Ch.2 &nbsp; &nbsp; &nbsp;Hal Foster  &nbsp; &nbsp; &nbsp;2000</h3>
-		</header>
-		<div id="navbar">
-			<a href="/index.html">Home</a>
-			<a href="/article-crime/index.html"><mark>Crime</mark></a>
-			<a href="/article-factory/index.html">Factory</a>
-			<a href="/article-discipline/index.html">Discipline</a>
-		  </div>
+	<header>
+	<div class="twocontentsheader">
+	<div class="headerdiv">
+		<div id="designandcrimetitle">
+	<h1 span id="top">Design &</h1>
+	<h2><span id="crime">Crime</span></h2>
+	</div>
+	<h1 id="andother">& Other Diatribes</h1>
+	</div>
+	<div class="authordiv">
+	<h3 id="volume">Ch.2, 2000</h3>
+	<h3 id="author1">Hal Foster</h3>
+	</div>
+	</div>
+	</header>
+		<div class="navbardiv">
+			<div id="navbar">
+				<a href="../index.html" class="mainlink">Home</a>
+				<a href="/article-crime/index.html" class="mainlink"><mark>Crime</mark></a>
+				<a href="/article-factory/index.html" class="mainlink">Factory</a>
+				<a href="/article-discipline/index.html" class="mainlink">Discipline</a>
+			  </div>
+			</div>
 		  <div id="backtotop">
 			<a href="#top" span id="arrow">&#x21E7;</a>
 		</div>
