applied the css to the factory article

--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -71,7 +71,7 @@
 			</section>
 			<section class="readnext">
 				<h3 span id="readnexttext">Read next</h3>
-				<h2 span id="nextarticle">Graphic Design’s Factory Settings</h2>
+				<a href="../article-factory/index.html" id="nextreadlink"><h2 span id="nextarticle">Graphic Design’s Factory Settings</h2></a>
 			</section>
 			</article>
 	</body>
