--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -173,8 +173,8 @@
 	</section>
 </section>
 	<section class="readnext">
-			<h3 span id="readnexttext">Read next</h3>
-			<h2 span id="nextarticle">Graphic Design’s Factory Settings</h2>
+			<h3 span id="readnexttext">Read previous</h3>
+			<a href="../article-factory/index.html"><h2 span id="nextarticle">Graphic Design’s Factory Settings</h2></a>
 		</section>
 	</section>
 			</article>
