--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -11,14 +11,18 @@
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
-<!-- Main title -->
+		<!-- Main title -->
 		<header>
-			<div class="header">
-			<h1>Graphic</h1>
-			<h2>Design's</h2>
-			<h2 span id="titlecontinue">Factory Settings</h2>
+			<div class="twocontentsheader">
+			<div class="headerdiv">
+			<h1 span id="top">Graphic Design's</h1>
+			<h2><span id="factory">Factory</span> Settings</h2>
 		</div>
-			<h3>Jacob Lindgren &nbsp; &nbsp; &nbsp;2020</h3>
+		<div class="authordiv">
+			<h3 id="volume">2020</h3>
+			<h3 id="author1">Jacob Lindgren</h3>
+		</div>
+		</div>
 		</header>
 		<div class="navbardiv">
 			<div id="navbar">
