edited the title settings

--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -16,7 +16,7 @@
 			<div class="twocontentsheader">
 			<div class="headerdiv">
 			<h1 span id="top">Graphic Design's</h1>
-			<h2><span id="factory">Factory</span> Settings</h2>
+			<h2><span id="factory">Factory</span> <span id="settings">Settings</span></h2>
 		</div>
 		<div class="authordiv">
 			<h3 id="volume">2020</h3>
