edited link from discipline article

--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -5,9 +5,9 @@
 	<!--Below is a meta element that tells the browser to render it at its actual size-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Below is a reset, it clears off browser's default style -->
-	<link href="/reset.css" rel="stylesheet">
+	<link href="../reset.css" rel="stylesheet">
 	<!-- Below is a link to my CSS file -->
-	<link href="/common.css" rel="stylesheet">
+	<link href="../common.css" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
 	</head>
 	<body>
@@ -27,9 +27,9 @@
 		<div class="navbardiv">
 			<div id="navbar">
 				<a href="/index.html" class="mainlink">Home</a>
-				<a href="/article-crime/index.html" class="mainlink">Crime</a>
-				<a href="/article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
-				<a href="/article-discipline/index.html" class="mainlink">Discipline</a>
+				<a href="article-crime/index.html" class="mainlink">Crime</a>
+				<a href="article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
+				<a href="article-discipline/index.html" class="mainlink">Discipline</a>
 			  </div>
 			</div>
 		  <div id="backtotop">
