--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<div id="navbar">
 			<a href="index.html" class="mainlink"><mark>Home</mark></a>
 			<a href="article-crime/index.html" class="mainlink">Crime</a>
-			<a href="article-factory/index.html" class="mainlink">Factory</a>
+			<a href="/article-factory/index.html" class="mainlink">Factory</a>
 			<a href="article-discipline/index.html" class="mainlink">Discipline</a>
 		  </div>
 		</div>
