--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 		<div class="headcontainer">
 		<header>
 			<div class="headertext">
-				<div class="disciplinetext">
-					<div class="discipline">
-						<h1>Design <span id="discipline">Evolution</span></h1>
-						<h1>Design <span id="discipline">Evolution</span></h1>
-						<h1>Design <span id="discipline">Evolution</span></h1>
-						<h1>Design <span id="discipline">Evolution</span></h1>
-						<h1>Design <span id="discipline">Evolution</span></h1>
-					</div>
-					</div>
+				<!-- <div class="disciplinetext"> -->
+					<!-- <div class="discipline"> -->
+						<!-- <h1>Design <span id="discipline">Evolution</span></h1> -->
+						<!-- <h1>Design <span id="discipline">Evolution</span></h1> -->
+						<!-- <h1>Design <span id="discipline">Evolution</span></h1> -->
+						<!-- <h1>Design <span id="discipline">Evolution</span></h1> -->
+						<!-- <h1>Design <span id="discipline">Evolution</span></h1> -->
+					<!-- </div> -->
+					<!-- </div> -->
 				<div class="crimetext">
 			<div class="crime">
 				<h1><span id="crime">&nbsp;&nbsp;&nbsp;&nbsp;Crime</span></h1>
@@ -51,16 +51,26 @@
 				<h1>Discipline <span id="discipline">Discipline</span></h1>
 				<h1>Discipline <span id="discipline">Discipline</span></h1>
 			</div>
+			<div class="disciplinetext">
+					<div class="discipline">
+						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1>Design <span id="discipline">Evolution</span></h1>
+						<h1>Design <span id="discipline">Evolution</span></h1>
+					</div>
+					</div>
 			</div>
+			
 			</div>
 			<!-- <div class="container-text"><p id="subtitle">Evolution of Design Function</p></div> -->
 		</header>
 	</div>
 	<div class="titlebig">
-		<div><h1 class="otherh1">Design Evolution:<br>Crime, Factory, and Discipline</h1></div>
+		<div id="titlebelow"><h1 class="otherh1">Design Evolution:</div>
 		<div id="linksbig">
 		<a href="article-crime/index.html" id="designcrimelink"><div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div></a>
-		<a href="article-factory/index.html"><div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div></a>
+		<a href="article-factory/index.html" id="factorylink"><div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div></a>
 		<a href="article-discipline/index.html"><div class="biglinkdiv3rd"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div></a>
 	</div>
 	</div>
@@ -69,7 +79,7 @@
 		<div id="navbar">
 			<a href="index.html" class="mainlink"><mark>Home</mark></a>
 			<a href="article-crime/index.html" class="mainlink">Crime</a>
-			<a href="/article-factory/index.html" class="mainlink">Factory</a>
+			<a href="article-factory/index.html" class="mainlink">Factory</a>
 			<a href="article-discipline/index.html" class="mainlink">Discipline</a>
 		  </div>
 		</div>
