--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -26,21 +26,25 @@
 		</header>
 		<div class="navbardiv">
 			<div id="navbar">
-				<a href="/index.html" class="mainlink">Home</a>
-				<a href="/article-crime/index.html" class="mainlink">Crime</a>
-				<a href="/article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
-				<a href="/article-discipline/index.html" class="mainlink">Discipline</a>
+				<a href="index.html" class="mainlink">Home</a>
+				<a href="article-crime/index.html" class="mainlink">Crime</a>
+				<a href="article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
+				<a href="article-discipline/index.html" class="mainlink">Discipline</a>
+				<a href="#top" class="mainlink">&#8593;</a>
 			  </div>
-			</div>
-		  <div id="backtotop">
-			<a href="#top" span id="arrow">&#x21E7;</a>
-		</div>
+			<!-- </div> -->
+		  <!-- <div id="backtotop"> -->
+			<!-- <a href="#top" span id="arrow">&#x21E7;</a> -->
+		<!-- </div> -->
 	<!-- Article for Factory Settings -->
 	 <article>
-		<section class="normal">
-				<p>“Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be designers in society and in relation to capital,” writes designer Jacob Lindgren.</p>
-			<section class="withbackground">
-				<p class="bigtext1">“A school becomes a factory producing designers, one that, in keeping with the principles of ‘good design,’ turns them into efficient and interchangeable parts ready to hit the market.”</p>
+		<section>
+			<div class="quote">
+				<p class="bigtext1">“Design education not only teaches its technical and historical canon, or how to design, but more importantly teaches students how to be <mark>designers in society and in relation to capital</mark>,”</p>
+				<p class="subparagraph">writes designer Jacob Lindgren.</p>
+			</div>
+			<section>
+				<p>“A school becomes a factory producing designers, one that, in keeping with the principles of ‘good design,’ turns them into efficient and interchangeable parts ready to hit the market.”</p>
 				<p> In a new essay, Lindgren proposes models that may help us undo this factory setting of graphic design.</p>
 				<p>In his book of essays, The Shape of Things, Czech philosopher and media critic Vilém Flusser argues that factories are decreasingly places where goods are produced and increasingly places where new kinds of humans are produced. Flusser viewed factories as the primary vessels and sites for agendas of progress and ideology, ones that instead of manufacturing solely goods also produced new kinds of subjects, writing that</p>
 				<p class="bigtext1">- “human history is the history of manufacturing and everything else is mere footnotes.”<sup>1</sup></p>
