--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -27,17 +27,19 @@
 	</div>
 	</div>
 	</header>
-		<div class="navbardiv">
-			<div id="navbar">
-				<a href="../index.html" class="mainlink">Home</a>
-				<a href="/article-crime/index.html" class="mainlink"><mark>Crime</mark></a>
-				<a href="/article-factory/index.html" class="mainlink">Factory</a>
-				<a href="/article-discipline/index.html" class="mainlink">Discipline</a>
-			  </div>
-			</div>
-		  <div id="backtotop">
-			<a href="#top" span id="arrow">&#x21E7;</a>
+	<div class="navbardiv">
+		<div id="navbar">
+			<a href="/index.html" class="mainlink">Home</a>
+			<a href="/article-crime/index.html" class="mainlink"><mark>Crime</mark></a>
+			<a href="/article-factory/index.html" class="mainlink">Factory</a>
+			<a href="/article-discipline/index.html" class="mainlink">Discipline</a>
+			<a href="#top" class="mainlink">&#8593;</a>
+		  </div>
 		</div>
+			</div>
+		  <!-- <div id="backtotop"> -->
+			<!-- <a href="#top" span id="arrow">&#x21E7;</a> -->
+		<!-- </div> -->
 	<!-- Article for Crime and Design -->
 	 <article>
 		<section class="normal">
