--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -28,15 +28,16 @@
 		</header>
 		<div class="navbardiv">
 			<div id="navbar">
-				<a href="../index.html" class="mainlink">Home</a>
+				<a href="/index.html" class="mainlink">Home</a>
 				<a href="/article-crime/index.html" class="mainlink">Crime</a>
 				<a href="/article-factory/index.html" class="mainlink">Factory</a>
 				<a href="/article-discipline/index.html" class="mainlink"><mark>Discipline</mark></a>
+				<a href="#top" class="mainlink">&#8593;</a>
 			  </div>
 			</div>
-		  <div id="backtotop">
-			<a href="#top" span id="arrow">&#x21E7;</a>
-		</div>
+		  <!-- <div id="backtotop"> -->
+			<!-- <a href="#top" span id="arrow">&#x21E7;</a> -->
+		<!-- </div> -->
 	<!-- Article for The Concept Of The Design Discipline -->
 	 <article>
 	<div class="stickytitle"><h3>Abstract</h3></div>
