--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 			<a href="article-crime/index.html" class="mainlink">Crime</a>
 			<a href="article-factory/index.html" class="mainlink">Factory</a>
 			<a href="article-discipline/index.html" class="mainlink">Discipline</a>
+			<a href="#top" class="mainlink">&#8593;</a>
 		  </div>
-		</div>
 	<!-- <div class="darkrectangle"></div> -->
 	<!-- Below is my introduction to the theme of the articles -->
 	 <article>
