--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<div id="linksbig">
 		<a href="article-crime/index.html" id="designcrimelink"><div class="biglinkdiv"><h2>DESIGN & CRIME</h2> <h2>&#8594</h2></div></a>
 		<a href="article-factory/index.html" id="factorylink"><div class="biglinkdiv"><h2>GRAPHIC DESIGN'S FACTORY SETTINGS</h2> <h2>&#8594</h2></div></a>
-		<a href="article-discipline/index.html"><div class="biglinkdiv3rd"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div></a>
+		<a href="article-discipline/index.html" id="disciplinelink"><div class="biglinkdiv"><h2>THE CONCEPT OF DESIGN DISCIPLINE</h2> <h2>&#8594</h2></div></a>
 	</div>
 	</div>
 </div>
