--- a/article-factory/index.html
+++ b/article-factory/index.html
@@ -26,10 +26,10 @@
 		</header>
 		<div class="navbardiv">
 			<div id="navbar">
-				<a href="/index.html" class="mainlink">Home</a>
-				<a href="/article-crime/index.html" class="mainlink">Crime</a>
-				<a href="article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
-				<a href="/article-discipline/index.html" class="mainlink">Discipline</a>
+				<a href="../index.html" class="mainlink">Home</a>
+				<a href="../article-crime/index.html" class="mainlink">Crime</a>
+				<a href="../article-factory/index.html" class="mainlink"><mark>Factory</mark></a>
+				<a href="../article-discipline/index.html" class="mainlink">Discipline</a>
 				<a href="#top" class="mainlink">&#8593;</a>
 			  </div>
 			<!-- </div> -->
