--- a/article-crime/index.html
+++ b/article-crime/index.html
@@ -29,10 +29,10 @@
 	</header>
 	<div class="navbardiv">
 		<div id="navbar">
-			<a href="index.html" class="mainlink">Home</a>
-			<a href="article-crime/index.html" class="mainlink"><mark>Crime</mark></a>
-			<a href="article-factory/index.html" class="mainlink">Factory</a>
-			<a href="article-discipline/index.html" class="mainlink">Discipline</a>
+			<a href="https://bulganbee.github.io/binding/" class="mainlink">Home</a>
+			<a href="https://bulganbee.github.io/binding/article-crime/index.html" class="mainlink"><mark>Crime</mark></a>
+			<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink">Factory</a>
+			<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink">Discipline</a>
 			<a href="#top" class="mainlink">&#8593;</a>
 		  </div>
 		</div>
