--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -28,10 +28,10 @@
 		</header>
 		<div class="navbardiv">
 			<div id="navbar">
-				<a href="/index.html" class="mainlink">Home</a>
-				<a href="/article-crime/index.html" class="mainlink">Crime</a>
-				<a href="/article-factory/index.html" class="mainlink">Factory</a>
-				<a href="/article-discipline/index.html" class="mainlink"><mark>Discipline</mark></a>
+				<a href="https://bulganbee.github.io/binding/" class="mainlink">Home</a>
+				<a href="https://bulganbee.github.io/binding/article-crime/index.html" class="mainlink">Crime</a>
+				<a href="https://bulganbee.github.io/binding/article-factory/index.html" class="mainlink">Factory</a>
+				<a href="https://bulganbee.github.io/binding/article-discipline/index.html" class="mainlink"><mark>Discipline</mark></a>
 				<a href="#top" class="mainlink">&#8593;</a>
 			  </div>
 			</div>
