Added 37 citation footnotes for article discipline

--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -173,6 +173,46 @@
 		<p span id="lastparagraph">The complex and interdependent issues we face today need undisciplined and irresponsible designers who act in productively irresponsible ways. With that stated, we must also endeavor to design with care and remember that, like design, the purpose of care is to affect positively the way we live. Finally, designers need to confront what most of them avoid—the past—and also accept that if design no longer needs an idea, should design still participate in the idea of design?</p>
 	</section>
 </section>
+	<section class="footnote">
+		<p class="footnote"><sup>1</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
+		<p class="footnote"><sup>2</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
+		<p class="footnote"><sup>3</sup> Ibid.</p>
+		<p class="footnote"><sup>4</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
+		<p class="footnote"><sup>5</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
+		<p class="footnote"><sup>6</sup> Heppell, S. “RSA Lectures: Stephen Heppell: Learning 2016,” <i>RSA Lectures</i>, 30 June, 2006. Online. Available at: http://www.teachers.tv/video/4957 (Accessed December 22, 2010).</p>
+		<p class="footnote"><sup>7</sup> Latour, B. “A Cautious Prometheus? A Few Steps Toward a Philosophy of Design (With Special Attention to Peter Sloterdijk).” In <i>Proceedings of the 2008 Annual International Conference of the Design History Society</i>, edited by F. Hackne, J. Glynne & V. Minto, pgs. 2-10, 2008.</p>
+		<p class="footnote"><sup>8</sup> Sudjic, D. <i>The Language of Things: Understanding the World of Desirable Objects</i>. New York, NY, USA: W.W. Norton, 2009.</p>
+		<p class="footnote"><sup>9</sup> Kimbell, L. “Rethinking Design Thinking: Part I.” <i>Design and Culture</i>, 3.3 (2011): pgs. 285-306.</p>
+		<p class="footnote"><sup>10</sup> Cross, N. <i>Designerly Ways of Knowing</i>. London, UK: Springer, 2006.</p>
+		<p class="footnote"><sup>11</sup> Rodgers, P.A. “Design Now.” In <i>Perimeters, Boundaries and Borders,</i> edited by J. Marshall, pgs. 8-11.</p>
+		<p class="footnote"><sup>12</sup> Schouwenberg, L. and Jongerius, H. <i>Hella Jongerius</i>. London, UK: Phaidon Press Ltd., 2003.</p>
+		<p class="footnote"><sup>13</sup> Bouroullec, R. & Bouroullec, E. <i>Ronan and Erwan Bouroullec</i>. London, UK: Phaidon Press Ltd., 2003.</p>
+		<p class="footnote"><sup>14</sup> van Hinte, E., ed. 1:1 <i>Marti Guixe</i>. Rotterdam, The Netherlands: 010 Publishers, 2002.</p>
+		<p class="footnote"><sup>15</sup> Myerson, J. <i>IDEO: Masters of Innovation.</i> London, UK: Laurence King Publishing, 2005.</p>
+		<p class="footnote"><sup>16</sup> West, D. “A New Generation.” <i>ICON</i>, 43 (2007): pgs. 56-64.</p>
+		<p class="footnote"><sup>17</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking,</i> 6 (2011).</p>
+		<p class="footnote"><sup>18</sup> Bourriaud, N. <i>Altermodern</i>. London, UK: Tate Publishing, 2009.</p>
+		<p class="footnote"><sup>19</sup> Hara, K. <i>Designing Design</i>. Zurich, Switzerland: Lars Muller Verlag, 2007.</p>
+		<p class="footnote"><sup>20</sup> D’Souza, S. & Renner, D. <i>Not Knowing</i>. London, UK: Lid Publishing, 2014.</p>
+		<p class="footnote"><sup>21</sup> Ranciere, J. <i>The Ignorant Schoolmaster: Five Lessons in Intellectual Emancipation</i>. California, CA, USA: Stanford University Press, 1991.</p>
+		<p class="footnote"><sup>22</sup> Huston, T. <i>Teaching What You Don’t Know</i>. Harvard, MA, USA: Harvard University Press, 2012.</p>
+		<p class="footnote"><sup>23</sup> Warman, M. “Dieter Rams: Apple has Achieved Something I Never Did,” <i>The Telegraph</i>, 7 June, 2011. Online.</p>
+		<p class="footnote"><sup>24</sup> Rams, D. et al. “The Munich Design Charter.” <i>Design Issues</i>, 8.1 (1991): pgs. 74-77.</p>
+		<p class="footnote"><sup>25</sup> Winston, A. “UK Government is Starting to take Design Seriously.” <i>Dezeen</i> (blog). 19 November, 2015.</p>
+		<p class="footnote"><sup>26</sup> Archer, B., Baynes, K. & Roberts, P. <i>A Framework for Design and Design Education: A Reader Containing Key Papers from the 1970s and 80s</i>. Wellesbourne, UK: Design and Technology Association, 2005.</p>
+		<p class="footnote"><sup>27</sup> Meadows, D.H., Meadows, D.L., Randers, J. & Behrens III., W.W. <i>Limits to Growth</i>. New York, NY, USA: Universe Books, 1972.</p>
+		<p class="footnote"><sup>28</sup> Zalasiewicz, J. et al., “Are We Now Living in the Anthropocene?” <i>GSA Today</i>, 18.2 (2008): pgs. 4-8.</p>
+		<p class="footnote"><sup>29</sup> Corcoran, P.L., Moore, C.J. & Jazvac, K. “An anthropogenic marker horizon in the future rock record.” <i>GSA Today</i>, 24.6 (2014): pgs. 4-8.</p>
+		<p class="footnote"><sup>30</sup> Fry, T. “Design: On the Question of The Imperative.” <i>Design and Culture</i>, 7.3 (2015): pgs. 417-422.</p>
+		<p class="footnote"><sup>31</sup> Moos, M.A. <i>Marshall McLuhan Essays: Media Research Technology, Art, Communication</i>. London, UK: Routledge, 1997: p. 78.</p>
+		<p class="footnote"><sup>32</sup> Bateson, G. <i>Steps to an Ecology of Mind</i>. New York, NY, USA: Ballantine Books, 1972.</p>
+		<p class="footnote"><sup>33</sup> Bremner, C. “Usability.” In <i>Design Dictionary: Perspectives on Design Terminology</i>, edited by T. Marshall & M. Erlhoff, pgs. 425-428. Basel, Switzerland: Birkhauser, 2008.</p>
+		<p class="footnote"><sup>34</sup> National Institute on Aging. <i>Global Health and Aging</i>, Washington D.C., USA: National Institute on Aging and National Institutes of Health, U.S. Department of Health and Human Services, 2011.</p>
+		<p class="footnote"><sup>35</sup> Foucault, M. <i>Madness and Civilization: A History of Insanity in the Age of Reason</i>. New York, NY, USA: Pantheon Books, 1971: p. 187.</p>
+		<p class="footnote"><sup>36</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
+		<p class="footnote"><sup>37</sup> Ibid.</p>
+
+	</section>
 	<section class="readnext">
 			<h3 span id="readnexttext">Read previous</h3>
 			<a href="../article-factory/index.html"><h2 span id="nextarticle">Graphic Design’s Factory Settings</h2></a>
