--- a/article-discipline/index.html
+++ b/article-discipline/index.html
@@ -46,6 +46,28 @@
 				<p>Moreover, this reliance on the ‘exhausted’ historic disciplines has become obsolete as the boundaries of our understanding have been superseded by a boundless space / time that we call ‘alter-plinarity.’<sup>5</sup></p>
 				<p class="bigtext1">The fragmentation of distinct disciplines has shifted creative practice from being ‘discipline-based’ to ‘issue- or project-based.’<sup>6</sup></p>
 				<p>Consequently, this paper presents a manifesto for the future design discipline that emphasizes disposing carefully of what you know, teaching what you do not know whilst always taking design seriously, protecting us from what we want, objecting to sustaining everything, designing without reproach, ensuring that objects are invisible but designed with care and within history whilst exploring design as an idea rather than an ideal.</p></section>
+				<details class="citation-div"> <summary><div id="footnotediv"><a>Abstract: Footnotes</a><a id="arrow-foot">&#8595;</a></div></summary>
+				<ul class="citation-list">  
+					<li class="footnotes-list">
+					<li class="footnote-item">
+					<p class="footnote"><sup>1</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
+					</li>
+					<li class="footnote-item">
+					<p class="footnote"><sup>2</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
+					</li>
+					<li class="footnote-item">
+					<p class="footnote"><sup>3</sup> Ibid.</p>
+					</li>
+					<li class="footnote-item">
+					<p class="footnote"><sup>4</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
+					</li>
+					<li class="footnote-item">
+					<p class="footnote"><sup>5</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
+					</li>
+					<li class="footnote-item">
+					<p class="footnote"><sup>6</sup> Heppell, S. “RSA Lectures: Stephen Heppell: Learning 2016,” <i>RSA Lectures</i>, 30 June, 2006. Online. Available at: http://www.teachers.tv/video/4957 (Accessed December 22, 2010).</p>
+					</li>
+				</details>
 			<section class="normal">
 				<div class="stickytitle"><h3>Introduction</h3></div>
 			<p class="topspace">Since the 1950s, the adoption and application of the word design has been expanding continuously both in type and remit, and now extends from the design of objects and spaces that we use daily to cities, landscapes, nations, cultures, bodies, genes, political systems, and the way we produce food, to the way we travel, build cars and clone sheep.<sup>7</sup> The reach of design has expanded way beyond Ernesto Rogers’ description from “... from the Spoon to the City” (“... dalla cucchiaio alla citta”)<sup>8</sup> to the way we formulate business and, more recently, think.<sup>9</sup></p>
@@ -174,12 +196,7 @@
 	</section>
 </section>
 	<section class="footnote">
-		<p class="footnote"><sup>1</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
-		<p class="footnote"><sup>2</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
-		<p class="footnote"><sup>3</sup> Ibid.</p>
-		<p class="footnote"><sup>4</sup> Rodgers, P.A. & Bremner, C. “Alterplinarity—‘Alternative Disciplinarity,’ in Future Art and Design Research Pursuits.” <i>Studies in Material Thinking</i>, 6 (2011).</p>
-		<p class="footnote"><sup>5</sup> Rodgers, P.A. & Bremner, C. “Exhausting Discipline: Undisciplined and Irresponsible Design.” <i>Architecture and Culture</i>, 1.1 (2013): pgs. 138-158.</p>
-		<p class="footnote"><sup>6</sup> Heppell, S. “RSA Lectures: Stephen Heppell: Learning 2016,” <i>RSA Lectures</i>, 30 June, 2006. Online. Available at: http://www.teachers.tv/video/4957 (Accessed December 22, 2010).</p>
+		
 		<p class="footnote"><sup>7</sup> Latour, B. “A Cautious Prometheus? A Few Steps Toward a Philosophy of Design (With Special Attention to Peter Sloterdijk).” In <i>Proceedings of the 2008 Annual International Conference of the Design History Society</i>, edited by F. Hackne, J. Glynne & V. Minto, pgs. 2-10, 2008.</p>
 		<p class="footnote"><sup>8</sup> Sudjic, D. <i>The Language of Things: Understanding the World of Desirable Objects</i>. New York, NY, USA: W.W. Norton, 2009.</p>
 		<p class="footnote"><sup>9</sup> Kimbell, L. “Rethinking Design Thinking: Part I.” <i>Design and Culture</i>, 3.3 (2011): pgs. 285-306.</p>
